--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               height=device-height,
               target-densitydpi=device-dpi" />
     <style>
-        body,html {
+        :root {
             margin:0;
             padding:0;
             width:100%;
@@ -35,15 +35,7 @@
     </style>
 </head>
 <body>
-    <ce-flip-card>
-        <div slot="front">
-            <h2>Front</h2>
-            <button>Flip Card</button>
-        </div>
-        <div slot="back">
-            Back
-        </div>
-    </ce-flip-card>
-    <script src="dist/flip-card.component.js?v=1"></script>
+
+    <script src="dist/popover.component.js?v=1"></script>
 </body>
 </html>
